--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,6 @@
     <a mat-button color="primary" href="/list">Lista</a>
   </nav>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<main class="app-main-container">
+  <router-outlet></router-outlet>
+</main>
