--- a/src/app/features/components/validar-festivo/validar-festivo.component.html
+++ b/src/app/features/components/validar-festivo/validar-festivo.component.html
@@ -2,12 +2,13 @@
   <mat-card-header class="app-header-holiday">
     <img src="assets/partying-face.png" class="app-card-emoji" />
     <span class="app-card-title">¡El Lunes 23 de Marzo es festivo!</span>
+    <mat-spinner></mat-spinner>
   </mat-card-header>
 
   <mat-card-content class="app-card-content">
     <mat-form-field class="app-card-input">
       <mat-label>Fecha</mat-label>
-      <input matInput [matDatepicker]="picker" />
+      <input matInput [matDatepicker]="picker" [formControl]="date" />
       <mat-hint>Escoge el el dia que quieres consultar.</mat-hint>
       <mat-datepicker-toggle matIconSuffix [for]="picker">
       </mat-datepicker-toggle>
