--- a/src/app/features/components/validar-festivo/validar-festivo.component.css
+++ b/src/app/features/components/validar-festivo/validar-festivo.component.css
@@ -3,6 +3,7 @@
   display: flex;
   overflow: hidden;
   border-radius: 28px;
+  transition: all 1s ease-in-out, height 1s ease-in-out;
 }
 
 .app-card-emoji {
