--- a/src/app/features/components/validar-festivo/validar-festivo.component.css
+++ b/src/app/features/components/validar-festivo/validar-festivo.component.css
@@ -3,7 +3,13 @@
   display: flex;
   overflow: hidden;
   border-radius: 28px;
-  transition: all 1s ease-in-out, height 1s ease-in-out;
+}
+
+@media screen and (min-width: 768px) {
+  .app-card {
+    width: 700px;
+    min-height: ;
+  }
 }
 
 .app-card-emoji {
@@ -22,7 +28,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 20px;
+  min-height: 150px;
 }
 
 .app-card-actions {
@@ -32,8 +40,4 @@
 .app-card-input,
 .app-card-actions-button {
   width: 100%;
-}
-
-.app-card-content {
-  margin-top: 24px;
 }
