chore: organización de dependencias

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     <a
       mat-button
       color="primary"
-      routerLink="/list"
+      routerLink="/lista"
       routerLinkActive="active"
       ariaCurrentWhenActive="page"
     >
