feat: usar date-fns como provider

--- a/src/app/features/components/list-holidays/list-holidays.component.html
+++ b/src/app/features/components/list-holidays/list-holidays.component.html
@@ -1,7 +1,7 @@
 <mat-card class="app-card">
   <div class="app-header-holiday">
     <img src="assets/party-popper.png" class="app-card-emoji" />
-    <span class="app-card-title">Días festivos para el año 2024</span>
+    <span class="app-card-title">Días festivos para el año {{ year }}</span>
   </div>
 
   <mat-card-content>
@@ -25,7 +25,7 @@
         <mat-datepicker
           #picker
           startView="multi-year"
-          (yearSelected)="onSelectYear($event, picker)"
+          (yearSelected)="onSelectDate($event, picker)"
         ></mat-datepicker>
       </mat-form-field>
       <button mat-flat-button class="app-card-actions-button">Consultar</button>
